--- a/sample.yaml
+++ b/sample.yaml
@@ -1,12 +1,4 @@
-foo: bar
-pleh: help
-stuff:
-    foo: bar
-    bar: foo
-# UserName: Alicia
-# Password: pinga123 * 
-# phone: 3256
-# TablesList:
-#       -EmployeeTable
-#       -SoftwaresList
-#       -HardwareList 
+rest:
+  url: "https://example.org/primenumbers/v1"
+  port: 8443
+prime_numbers: [2, 3, 5, 7, 11, 13, 17, 19]
